@@ -330,6 +330,20 @@ XIN = {
 
 LEP = {
 	dynamic_country_name = {
+		name = dyn_c_league_of_eight_provinces
+		adjective = dyn_c_league_of_eight_provinces_adj
+		is_main_tag_only = yes
+		priority = 1
+		trigger = {
+			exists = c:LEP
+			c:LEP = {
+				any_scope_state = {
+					count >= 8
+				}
+			}
+		}
+	}
+	dynamic_country_name = {
 		name = dyn_c_ning_clique
 		adjective = dyn_c_ning_clique_adj
 		is_main_tag_only = yes
@@ -338,7 +352,7 @@ LEP = {
 			exists = c:LEP
 			c:LEP = {
 				any_scope_state = {
-					count <= 7
+					count <= 4
 				}
 			}
 		}
