@@ -19,12 +19,17 @@
 		}
 	}
 	fail = {
-		custom_tooltip = {
-			text = je_daoguang_reform_main_fail_tt
-			NOT = {
-				any_scope_character = {
-					has_template = chi_daoguang_template
+		OR = {
+			custom_tooltip = {
+				text = je_daoguang_reform_main_fail_tt
+				NOT = {
+					any_scope_character = {
+						has_template = chi_daoguang_template
+					}
 				}
+			}
+			NOT = {
+				has_law = law_type:law_monarchy
 			}
 		}
 	}
@@ -87,9 +92,14 @@ je_daoguang_reform_grain = {
 	fail = {
 		custom_tooltip = {
 			text = je_daoguang_reform_main_fail_tt
-			NOT = {
-				any_scope_character = {
-					has_template = chi_daoguang_template
+			OR = {
+				NOT = {
+					any_scope_character = {
+						has_template = chi_daoguang_template
+					}
+				}
+				NOT = {
+					has_journal_entry = je_daoguang_reform_main
 				}
 			}
 		}
@@ -125,9 +135,14 @@ je_daoguang_reform_mine = {
 	fail = {
 		custom_tooltip = {
 			text = je_daoguang_reform_main_fail_tt
-			NOT = {
-				any_scope_character = {
-					has_template = chi_daoguang_template
+			OR = {
+				NOT = {
+					any_scope_character = {
+						has_template = chi_daoguang_template
+					}
+				}
+				NOT = {
+					has_journal_entry = je_daoguang_reform_main
 				}
 			}
 		}
@@ -180,9 +195,14 @@ je_daoguang_reform_opium = {
 			}
 			custom_tooltip = {
 				text = je_daoguang_reform_main_fail_tt
-				NOT = {
-					any_scope_character = {
-						has_template = chi_daoguang_template
+				OR = {
+					NOT = {
+						any_scope_character = {
+							has_template = chi_daoguang_template
+						}
+					}
+					NOT = {
+						has_journal_entry = je_daoguang_reform_main
 					}
 				}
 			}
