@@ -7,7 +7,7 @@
  HKG_ADJ: "Hong Kong"
  MACAU: "Macau"
  MACAU_ADJ: "Macanese"
- LEP: "League of Eight Provinces"
+ LEP: "League of Five Provinces"
  LEP_ADJ: "The League"
  HBE: "Hubei"
  HBE_ADJ: "Hubei"
@@ -52,3 +52,5 @@
  dyn_c_an_nam_adj: "An Namese"
  dyn_c_giao_chi: "Giao Chi"
  dyn_c_giao_chi_adj: "Giao Chi"
+ dyn_c_league_of_eight_provinces: "League of Eight Provinces"
+ dyn_c_league_of_eight_provinces_adj: "League of Eight Provinces"
