@@ -7,8 +7,8 @@
   HKG_ADJ: "香港"
   MACAU: "澳门"
   MACAU_ADJ: "澳门"
-  LEP: "八省联合"
-  LEP_ADJ: "八省联合"
+  LEP: "五省联合"
+  LEP_ADJ: "五省联合"
   HBE: "湖北"
   HBE_ADJ: "湖北"
   RYU: "琉球"
@@ -52,3 +52,5 @@
   dyn_c_an_nam_adj: "安南"
   dyn_c_giao_chi: "交趾"
   dyn_c_giao_chi_adj: "交趾"
+  dyn_c_league_of_eight_provinces: "八省联合"
+  dyn_c_league_of_eight_provinces_adj: "八省联合"
